--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,10 +1,13 @@
 :root {
   //dimensions
-  --navbar-height: 90px;
+  --navbar-height: 80px;
+  --navbar-padding-except-bottom: 20px;
   --footer-height: 90px;
 
   //colors
-  --navbar-background: repeating-linear-gradient(45deg, rgb(215, 211, 7), rgb(255, 238, 1), rgb(215, 211, 7) 30%);
+  --navbar-background: repeating-linear-gradient(45deg, rgb(255, 238, 1), rgb(228, 232, 0), rgb(255, 238, 1) 15%);
+
+  ;
 }
 
 * {
@@ -12,6 +15,7 @@
   margin: 0;
   border: 0;
 }
+
 
 #main-page-wrapper {
   //make sure minimum height of the wrapper is the height of the viewport minus the heights of the navbar and footer.
