Added resume tab to navbar and made it so that social container in the navbar is not displayed when then width of the screen is less than 900px.

--- a/src/components/top-navbar-styles.module.scss
+++ b/src/components/top-navbar-styles.module.scss
@@ -99,6 +99,16 @@
   }
 }
 
+@media screen and (max-width: 900px) {
+  .header {
+    .nav {
+      .social-container {
+        display: none;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   .header {
     .hamburger {
@@ -124,6 +134,7 @@
       }
 
       .social-container {
+        display: block;
         background-color: transparent;
       }
 
