Added first wood grain texture in CSS.

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,7 +8,23 @@
   --gold-1: rgb(228, 232, 0);
   --gold-2: rgb(255, 238, 1);
 
-  --navbar-background: var(--gold-1);
+  --wood-grain-straight-light-horizontal: repeating-linear-gradient(
+    0deg, 
+    #dcc465 0px, 
+    #dcc465 10px, 
+    #9c8b46 10px, 
+    #9c8b46 15px,
+    #dcc465 15px, 
+    #dcc465 25px, 
+    #b09d52 25px, 
+    #b09d52 35px, 
+    #dcc465 35px, 
+    #dcc465 45px, 
+    #9c8b46 45px, 
+    #9c8b46 50px
+  );
+
+  --navbar-background: var(--wood-grain-straight-light-horizontal);
 
 }
 
