Added wood background to footer and reduced size of canvas.

--- a/src/components/footer-styles.module.scss
+++ b/src/components/footer-styles.module.scss
@@ -1,6 +1,6 @@
 .footer {
   height: var(--footer-height);
-  background-color: red;
+  background: var(--pine-light-grain-horizontal);
 
   a {
     text-decoration: none;
