Added toolbox svg for listing tools and skills in portfolio.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,6 +4,13 @@
         color: yellow;
     }
 
+    .toolbox {
+        width: 80%;
+        height: auto;
+        margin-left: 10%;
+        margin-right: 10%; 
+    }
+
     .resume-pdf-wrapper {
         padding: 5%;
     }
