--- a/src/components/top-navbar-styles.module.scss
+++ b/src/components/top-navbar-styles.module.scss
@@ -15,12 +15,25 @@
 
   padding: var(--navbar-padding-except-bottom);
   padding-bottom: 0px;
-  background: var(--navbar-background);
+  background: var(--walnut-grain-vertical);
   overflow: hidden; //prevents user from interacting with elements outside of the borders of this element
+
+  //represents the top of a drawer, is on the z-index
+  //below the logo and links and the z-index above the drawer bottom
+  .drawerTopContainer {
+    z-index: 1;
+    position: absolute; //prevents container from interfering with positions of other sibling elements
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: calc(var(--navbar-height) - var(--navbar-padding-except-bottom));
+    background: var(--navbar-background);
+  }
 
   .logo-container {
     text-decoration: none;
     height: 100%;
+    z-index: 2; //stays above all elements in navbar
 
 
     .name {
@@ -36,6 +49,7 @@
     display: none;
     width: 40px;
     height: 30px;
+    z-index: 2; //stays above all elements in navbar
     background-color: transparent;
     cursor: pointer;
 
@@ -81,6 +95,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    z-index: 2; //when in wide-screen mode, make it have the highest z-index so that links can be seen
     height: 100%;
 
     .link {
@@ -106,9 +121,11 @@
   }
 }
 
+//used for tablet screens
 @media screen and (max-width: 900px) {
   .header {
     .nav {
+      //dont display the list of socials when in tablet mode
       .social-container {
         display: none;
       }
@@ -116,6 +133,7 @@
   }
 }
 
+//used for phone screens
 @media screen and (max-width: 768px) {
   .header {
 
@@ -131,10 +149,14 @@
       position: absolute;
       //make sure navbar stays under the bottom border of the header when not in dropdown mode.
       //this is hidden due to the overflow: hidden attribute in the header.
-      top: calc(var(--navbar-height));
 
+      //use -100vh so that when header expands to 100vh, the nav
+      //will have the same height as the header's 100vh height.
+      top: calc(-100vh - var(--navbar-height) + var(--navbar-padding-except-bottom));
+      transition: top 0.5s; //make sure transition is same as the one used for the header dropdown
       left: 0;
       width: 100%;
+      z-index: 0; //move to lowest z-index so that the logo, hamburger, and drawerTopContainer are above this element
 
       border-width: var(--navbar-padding-except-bottom);
       border-color: darken($color: brown, $amount: 20%);
@@ -142,7 +164,8 @@
       border-bottom: none;
       border-top: none;
 
-      background: var(--walnut-grain-vertical);
+      //background is already supplied by header
+     // background: var(--walnut-grain-vertical);
 
       overflow: hidden;
 
@@ -173,7 +196,9 @@
   .header.dropdown {
     height: 100vh;
     .nav {
-    //  top: var(--navbar-height);
+      //move the nav container down so that the entire container is visible.
+      //this creates the illusion of someone opening a drawer and looking at what's inside.
+      top: calc(var(--navbar-height) - var(--navbar-padding-except-bottom));
     }
   }
 }
