Made many changes:
1. Updated SCSS files to use more SASS features like mixins and preprocessed variables to avoid duplicating code.
2. Modified the navbar so that interactable elements, such as the logo, have an appropriately sized bounding box that only fits over the desired content.
3. Gave a white background for the Resume pdf so that mobile browsers have a better time viewing that PDF.
4. Wrapped the Resume PDF in a link to the full resume file so that mobile browsers that have problems embedding PDFs in HTML can render them correctly.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,17 +1,30 @@
+@use "wood-theme" as wood;
+
 .main {
-    background: var(--walnut-grain-vertical);
-    h1 {
-        color: yellow;
-    }
+  @include wood.straight-grain-1-walnut-dark(135deg);
+  h1 {
+    color: yellow;
+  }
 
-    .toolbox {
-        width: 80%;
-        height: auto;
-        margin-left: 10%;
-        margin-right: 10%; 
-    }
+  .toolbox {
+    width: 80%;
+    height: auto;
+    margin-left: 10%;
+    margin-right: 10%; 
+  }
 
-    .resume-pdf-wrapper {
-        padding: 5%;
-    }
+  .resume-pdf-wrapper {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    height: 500px;
+    background-color: white;
+  }
+
+  .heroBackgroundCanvas {
+    width: 80%;
+    height: 400px;
+    margin-left: 10%;
+    margin-right: 10%; 
+  }
 }
