--- a/src/styles/_wood-theme.scss
+++ b/src/styles/_wood-theme.scss
@@ -1,6 +1,28 @@
-@mixin straight-grain-1($degree: 0deg, $color0, $color1, $color2) {
-  background: repeating-linear-gradient(
-    0deg, 
+//variables 
+
+$bassword-light0: rgb(240, 216, 121);
+$bassword-light1: rgb(213, 193, 116);
+$bassword-light2: rgb(211, 190, 107);
+
+$pine-light0: rgb(220, 196, 101);
+$pine-light1: rgb(193, 173, 96);
+$pine-light2: rgb(191, 170, 87);
+
+$pine-dark0: rgb(180, 156, 61);
+$pine-dark1: rgb(153, 133, 56);
+$pine-dark2: rgb(151, 130, 47);
+
+$walnut-light0: rgb(100, 80, 30);
+$walnut-light1: rgb(90, 70, 20);
+$walnut-light2: rgb(80, 60, 10);
+
+$walnut-dark0: rgb(60, 40, 0);
+$walnut-dark1: rgb(50, 30, 0);
+$walnut-dark2: rgb(40, 20, 0);
+
+@function straight-grain-1($degree: 0deg, $color0, $color1, $color2) {
+  @return repeating-linear-gradient(
+    $degree, 
     $color0 0px, 
     $color0 10px, 
     $color1 10px, 
@@ -16,360 +38,106 @@
   );
 }
 
-@mixin straight-grain-1-basswood-light($degree: 0deg) {
-  $color0: rgb(240, 216, 121);
-  $color1: rgb(213, 193, 116);
-  $color2: rgb(211, 190, 107);
+@mixin straight-grain-1-bg($degree: 0deg, $color0, $color1, $color2) {
+  background: straight-grain-1($degree, $color0, $color1, $color2);
+}
 
-  @include straight-grain-1(
+@mixin straight-grain-1-basswood-light-bg($degree: 0deg) {
+  @include straight-grain-1-bg(
     $degree, 
-    $color0, 
-    $color1, 
-    $color2
+    $bassword-light0, 
+    $bassword-light1, 
+    $bassword-light2
   );
 }
 
-@mixin straight-grain-1-pine-light($degree: 0deg) {
-  $color0: rgb(220, 196, 101);
-  $color1: rgb(193, 173, 96);
-  $color2: rgb(191, 170, 87);
-
-  @include straight-grain-1(
+@mixin straight-grain-1-pine-light-bg($degree: 0deg) {
+  @include straight-grain-1-bg(
     $degree, 
-    $color0, 
-    $color1, 
-    $color2
+    $pine-light0, 
+    $pine-light1, 
+    $pine-light2
   );
 }
 
-@mixin straight-grain-1-pine-dark($degree: 0deg) {
-  $color0: rgb(180, 156, 61);
-  $color1: rgb(153, 133, 56);
-  $color2: rgb(151, 130, 47);
-
-  @include straight-grain-1(
+@mixin straight-grain-1-pine-dark-bg($degree: 0deg) {
+  @include straight-grain-1-bg(
     $degree, 
-    $color0, 
-    $color1, 
-    $color2
+    $pine-dark0, 
+    $pine-dark1, 
+    $pine-dark2
   );
 }
 
-@mixin straight-grain-1-walnut-light($degree: 0deg) {
-  $color0: rgb(100, 80, 30);
-  $color1: rgb(90, 70, 20);
-  $color2: rgb(80, 60, 10);
-
-  @include straight-grain-1(
+@mixin straight-grain-1-walnut-light-bg($degree: 0deg) {
+  @include straight-grain-1-bg(
     $degree, 
-    $color0, 
-    $color1, 
-    $color2
+    $walnut-light0, 
+    $walnut-light1, 
+    $walnut-light2
   );
 }
 
-@mixin straight-grain-1-walnut-dark($degree: 0deg) {
-  $color0: rgb(60, 40, 0);
-  $color1: rgb(50, 30, 0);
-  $color2: rgb(40, 20, 0);
-
-  @include straight-grain-1(
+@mixin straight-grain-1-walnut-dark-bg($degree: 0deg) {
+  @include straight-grain-1-bg(
     $degree, 
-    $color0, 
-    $color1, 
-    $color2
+    $walnut-dark0, 
+    $walnut-dark1, 
+    $walnut-dark2
   );
 }
 
-/*
-
-:root {
-
-  //basswood grain color
-  --basswood-light0: rgb(240, 216, 121);
-  --basswood-light1: rgb(213, 193, 116);
-  --basswood-light2: rgb(211, 190, 107);
-  
-  //pine grain colors
-  --pine-light0: rgb(220, 196, 101);
-  --pine-light1: rgb(193, 173, 96);
-  --pine-light2: rgb(191, 170, 87);
-
-  //pine dark grain colors
-  --pine-dark0: rgb(180, 156, 61);
-  --pine-dark1: rgb(153, 133, 56);
-  --pine-dark2: rgb(151, 130, 47);
-
-  //walnut grain colors
-  --walnut-dark0: rgb(100, 80, 30);
-  --walnut-dark1: rgb(90, 70, 20);
-  --walnut-dark2: rgb(80, 60, 10);
-
-
-  
-
-  //wood grain backgrounds
-
-  --basswood-light-grain-horizontal: repeating-linear-gradient(
-    0deg, 
-    var(--basswood-light0) 0px, 
-    var(--basswood-light0) 10px, 
-    var(--basswood-light1) 10px, 
-    var(--basswood-light1) 15px,
-    var(--basswood-light0) 15px, 
-    var(--basswood-light0) 25px, 
-    var(--basswood-light2) 25px, 
-    var(--basswood-light2) 35px, 
-    var(--basswood-light0) 35px, 
-    var(--basswood-light0) 45px, 
-    var(--basswood-light1) 45px, 
-    var(--basswood-light1) 50px
-  );
-
-  --basswood-light-grain-vertical: repeating-linear-gradient(
-    90deg, 
-    var(--basswood-light0) 0px, 
-    var(--basswood-light0) 10px, 
-    var(--basswood-light1) 10px, 
-    var(--basswood-light1) 15px,
-    var(--basswood-light0) 15px, 
-    var(--basswood-light0) 25px, 
-    var(--basswood-light2) 25px, 
-    var(--basswood-light2) 35px, 
-    var(--basswood-light0) 35px, 
-    var(--basswood-light0) 45px, 
-    var(--basswood-light1) 45px, 
-    var(--basswood-light1) 50px
-  );
-
-  --basswood-light-grain-diagonal-right: repeating-linear-gradient(
-    45deg, 
-    var(--basswood-light0) 0px, 
-    var(--basswood-light0) 10px, 
-    var(--basswood-light1) 10px, 
-    var(--basswood-light1) 15px,
-    var(--basswood-light0) 15px, 
-    var(--basswood-light0) 25px, 
-    var(--basswood-light2) 25px, 
-    var(--basswood-light2) 35px, 
-    var(--basswood-light0) 35px, 
-    var(--basswood-light0) 45px, 
-    var(--basswood-light1) 45px, 
-    var(--basswood-light1) 50px
-  );
-
-  --basswood-light-grain-diagonal-left: repeating-linear-gradient(
-    135deg, 
-    var(--basswood-light0) 0px, 
-    var(--basswood-light0) 10px, 
-    var(--basswood-light1) 10px, 
-    var(--basswood-light1) 15px,
-    var(--basswood-light0) 15px, 
-    var(--basswood-light0) 25px, 
-    var(--basswood-light2) 25px, 
-    var(--basswood-light2) 35px, 
-    var(--basswood-light0) 35px, 
-    var(--basswood-light0) 45px, 
-    var(--basswood-light1) 45px, 
-    var(--basswood-light1) 50px
-  );
-
-
-
-  --pine-light-grain-horizontal: repeating-linear-gradient(
-    0deg, 
-    var(--pine-light0) 0px, 
-    var(--pine-light0) 10px, 
-    var(--pine-light1) 10px, 
-    var(--pine-light1) 15px,
-    var(--pine-light0) 15px, 
-    var(--pine-light0) 25px, 
-    var(--pine-light2) 25px, 
-    var(--pine-light2) 35px, 
-    var(--pine-light0) 35px, 
-    var(--pine-light0) 45px, 
-    var(--pine-light1) 45px, 
-    var(--pine-light1) 50px
-  );
-
-  --pine-light-grain-vertical: repeating-linear-gradient(
-    90deg, 
-    var(--pine-light0) 0px, 
-    var(--pine-light0) 10px, 
-    var(--pine-light1) 10px, 
-    var(--pine-light1) 15px,
-    var(--pine-light0) 15px, 
-    var(--pine-light0) 25px, 
-    var(--pine-light2) 25px, 
-    var(--pine-light2) 35px, 
-    var(--pine-light0) 35px, 
-    var(--pine-light0) 45px, 
-    var(--pine-light1) 45px, 
-    var(--pine-light1) 50px
-  );
-
-  --pine-light-grain-diagonal-right: repeating-linear-gradient(
-    45deg, 
-    var(--pine-light0) 0px, 
-    var(--pine-light0) 10px, 
-    var(--pine-light1) 10px, 
-    var(--pine-light1) 15px,
-    var(--pine-light0) 15px, 
-    var(--pine-light0) 25px, 
-    var(--pine-light2) 25px, 
-    var(--pine-light2) 35px, 
-    var(--pine-light0) 35px, 
-    var(--pine-light0) 45px, 
-    var(--pine-light1) 45px, 
-    var(--pine-light1) 50px
-  );
-
-  --pine-light-grain-diagonal-left: repeating-linear-gradient(
-    135deg, 
-    var(--pine-light0) 0px, 
-    var(--pine-light0) 10px, 
-    var(--pine-light1) 10px, 
-    var(--pine-light1) 15px,
-    var(--pine-light0) 15px, 
-    var(--pine-light0) 25px, 
-    var(--pine-light2) 25px, 
-    var(--pine-light2) 35px, 
-    var(--pine-light0) 35px, 
-    var(--pine-light0) 45px, 
-    var(--pine-light1) 45px, 
-    var(--pine-light1) 50px
-  );
-
-
-  --pine-dark-grain-horizontal: repeating-linear-gradient(
-    0deg, 
-    var(--pine-dark0) 0px, 
-    var(--pine-dark0) 10px, 
-    var(--pine-dark1) 10px, 
-    var(--pine-dark1) 15px,
-    var(--pine-dark0) 15px, 
-    var(--pine-dark0) 25px, 
-    var(--pine-dark2) 25px, 
-    var(--pine-dark2) 35px, 
-    var(--pine-dark0) 35px, 
-    var(--pine-dark0) 45px, 
-    var(--pine-dark1) 45px, 
-    var(--pine-dark1) 50px
-  );
-
-  --pine-dark-grain-vertical: repeating-linear-gradient(
-    90deg, 
-    var(--pine-dark0) 0px, 
-    var(--pine-dark0) 10px, 
-    var(--pine-dark1) 10px, 
-    var(--pine-dark1) 15px,
-    var(--pine-dark0) 15px, 
-    var(--pine-dark0) 25px, 
-    var(--pine-dark2) 25px, 
-    var(--pine-dark2) 35px, 
-    var(--pine-dark0) 35px, 
-    var(--pine-dark0) 45px, 
-    var(--pine-dark1) 45px, 
-    var(--pine-dark1) 50px
-  );
-
-  --pine-dark-grain-diagonal-right: repeating-linear-gradient(
-    45deg, 
-    var(--pine-dark0) 0px, 
-    var(--pine-dark0) 10px, 
-    var(--pine-dark1) 10px, 
-    var(--pine-dark1) 15px,
-    var(--pine-dark0) 15px, 
-    var(--pine-dark0) 25px, 
-    var(--pine-dark2) 25px, 
-    var(--pine-dark2) 35px, 
-    var(--pine-dark0) 35px, 
-    var(--pine-dark0) 45px, 
-    var(--pine-dark1) 45px, 
-    var(--pine-dark1) 50px
-  );
-
-  --pine-dark-grain-diagonal-left: repeating-linear-gradient(
-    135deg, 
-    var(--pine-dark0) 0px, 
-    var(--pine-dark0) 10px, 
-    var(--pine-dark1) 10px, 
-    var(--pine-dark1) 15px,
-    var(--pine-dark0) 15px, 
-    var(--pine-dark0) 25px, 
-    var(--pine-dark2) 25px, 
-    var(--pine-dark2) 35px, 
-    var(--pine-dark0) 35px, 
-    var(--pine-dark0) 45px, 
-    var(--pine-dark1) 45px, 
-    var(--pine-dark1) 50px
-  );
-
-  --walnut-grain-horizontal: repeating-linear-gradient(
-    0deg, 
-    var(--walnut-dark0) 0px, 
-    var(--walnut-dark0) 10px, 
-    var(--walnut-dark1) 10px, 
-    var(--walnut-dark1) 15px,
-    var(--walnut-dark0) 15px, 
-    var(--walnut-dark0) 25px, 
-    var(--walnut-dark2) 25px, 
-    var(--walnut-dark2) 35px, 
-    var(--walnut-dark0) 35px, 
-    var(--walnut-dark0) 45px, 
-    var(--walnut-dark1) 45px, 
-    var(--walnut-dark1) 50px
-  );
-
-  --walnut-grain-vertical: repeating-linear-gradient(
-    90deg, 
-    var(--walnut-dark0) 0px, 
-    var(--walnut-dark0) 10px, 
-    var(--walnut-dark1) 10px, 
-    var(--walnut-dark1) 15px,
-    var(--walnut-dark0) 15px, 
-    var(--walnut-dark0) 25px, 
-    var(--walnut-dark2) 25px, 
-    var(--walnut-dark2) 35px, 
-    var(--walnut-dark0) 35px, 
-    var(--walnut-dark0) 45px, 
-    var(--walnut-dark1) 45px, 
-    var(--walnut-dark1) 50px
-  );
-
-  --walnut-grain-diagonal-right: repeating-linear-gradient(
-    45deg, 
-    var(--walnut-dark0) 0px, 
-    var(--walnut-dark0) 10px, 
-    var(--walnut-dark1) 10px, 
-    var(--walnut-dark1) 15px,
-    var(--walnut-dark0) 15px, 
-    var(--walnut-dark0) 25px, 
-    var(--walnut-dark2) 25px, 
-    var(--walnut-dark2) 35px, 
-    var(--walnut-dark0) 35px, 
-    var(--walnut-dark0) 45px, 
-    var(--walnut-dark1) 45px, 
-    var(--walnut-dark1) 50px
-  );
-
-  --walnut-grain-diagonal-left: repeating-linear-gradient(
-    135deg, 
-    var(--walnut-dark0) 0px, 
-    var(--walnut-dark0) 10px, 
-    var(--walnut-dark1) 10px, 
-    var(--walnut-dark1) 15px,
-    var(--walnut-dark0) 15px, 
-    var(--walnut-dark0) 25px, 
-    var(--walnut-dark2) 25px, 
-    var(--walnut-dark2) 35px, 
-    var(--walnut-dark0) 35px, 
-    var(--walnut-dark0) 45px, 
-    var(--walnut-dark1) 45px, 
-    var(--walnut-dark1) 50px
-  );
-
-  
+@mixin straight-grain-1-border($degree: 0deg, $slice, $color0, $color1, $color2) {
+  border-image: straight-grain-1($degree, $color0, $color1, $color2);
+  border-image-slice: $slice;
 }
 
-*/
+@mixin straight-grain-1-basswood-light-border($degree: 0deg, $slice) {
+  @include straight-grain-1-border(
+    $degree, 
+    $slice,
+    $bassword-light0, 
+    $bassword-light1, 
+    $bassword-light2
+  );
+}
+
+@mixin straight-grain-1-pine-light-border($degree: 0deg, $slice) {
+  @include straight-grain-1-border(
+    $degree, 
+    $slice,
+    $pine-light0, 
+    $pine-light1, 
+    $pine-light2
+  );
+}
+
+@mixin straight-grain-1-pine-dark-border($degree: 0deg, $slice) {
+  @include straight-grain-1-border(
+    $degree, 
+    $slice,
+    $pine-dark0, 
+    $pine-dark1, 
+    $pine-dark2
+  );
+}
+
+@mixin straight-grain-1-walnut-light-border($degree: 0deg, $slice) {
+  @include straight-grain-1-border(
+    $degree, 
+    $slice,
+    $walnut-light0, 
+    $walnut-light1, 
+    $walnut-light2
+  );
+}
+
+@mixin straight-grain-1-walnut-dark-border($degree: 0deg, $slice) {
+  @include straight-grain-1-border(
+    $degree, 
+    $slice,
+    $walnut-dark0, 
+    $walnut-dark1, 
+    $walnut-dark2
+  );
+}
